Integrated llama3 and phi4 latest LLM model for queries related to inventory